objects/Async_Job__c.object
<CustomObject>
    <fields>
        <fullName>Apex_Class_Name__c</fullName>
        <description>The class name that created this job.</description>
        <inlineHelpText>The class name that created this job.</inlineHelpText>
        <label>Apex Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Group_Status__c</fullName>
        <description>the status of the entire batch (mainly used for chaining)</description>
        <inlineHelpText>the status of the entire batch (mainly used for chaining)</inlineHelpText>
        <label>Batch Group Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preparing</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Initiator__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this job the initiator in a chain of related jobs?</description>
        <inlineHelpText>Is this job the initiator in a chain of related jobs?</inlineHelpText>
        <label>Is Initiator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Job_Details__c</fullName>
        <description>Overall job details.. running stats. stack traces etc. This is stored in JSON @see  AsyncSvc</description>
        <inlineHelpText>Overall job details.. running stats. stack traces etc. This is stored in JSON @see  AsyncSvc</inlineHelpText>
        <label>Overall Job Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Job_Status__c</fullName>
        <description>The overall status of the job (mainly used for chaining)</description>
        <inlineHelpText>The overall status of the job (mainly used for chaining)</inlineHelpText>
        <label>Overall Job Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Job_Id__c</fullName>
        <description>Textual rep of an 18 char SFDC ID. FK to AsyncApexJob.Id</description>
        <inlineHelpText>Textual rep of an 18 char SFDC ID. FK to AsyncApexJob.Id</inlineHelpText>
        <label>Parent Job Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Job_Status__c</fullName>
        <label>Parent Job Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preparing</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Async Job</label>
    <nameField>
        <label>Async Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>